--- a/vite-project/src/task.html
+++ b/vite-project/src/task.html
@@ -1,50 +1,86 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>My experiment</title>
     <script src="https://unpkg.com/jspsych@8.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@2.0.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@2.0.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-preload@2.0.0"></script>
     <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
-</head>
+  </head>
+  <body></body>
+  <script>
 
-<body></body>
-<script>
     /* initialize jsPsych */
     var jsPsych = initJsPsych();
 
     /* create timeline */
     var timeline = [];
 
+    /* preload images */
+    var preload = {
+      type: jsPsychPreload,
+      images: ['img/blue.png', 'img/orange.png']
+    }
+    timeline.push(preload);
+
     /* define welcome message trial */
     var welcome = {
-        type: jsPsychHtmlKeyboardResponse,
-        stimulus: "Welcome to the experiment. Press any key to begin."
+      type: jsPsychHtmlKeyboardResponse,
+      stimulus: "Welcome to the experiment. Press any key to begin."
     };
     timeline.push(welcome);
 
+    /* define instructions trial */
     var instructions = {
-        type: jsPsychHtmlKeyboardResponse,
-        stimulus: `
-    <p>In this experiment, a circle will appear in the center 
-    of the screen.</p><p>If the circle is <strong>blue</strong>, 
-    press the letter F on the keyboard as fast as you can.</p>
-    <p>If the circle is <strong>orange</strong>, press the letter J 
-    as fast as you can.</p>
-    <div style='width: 700px;'>
-    <div style='float: left;'><img src='../public/blue.png'></img>
-    <p class='small'><strong>Press the F key</strong></p></div>
-    <div style='float: right;'><img src='../public/orange.png'></img>
-    <p class='small'><strong>Press the J key</strong></p></div>
-    </div>
-    <p>Press any key to begin.</p>
-  `,
-        post_trial_gap: 2000
+      type: jsPsychHtmlKeyboardResponse,
+      stimulus: `
+        <p>In this experiment, a circle will appear in the center 
+        of the screen.</p><p>If the circle is <strong>blue</strong>, 
+        press the letter F on the keyboard as fast as you can.</p>
+        <p>If the circle is <strong>orange</strong>, press the letter J 
+        as fast as you can.</p>
+        <div style='width: 700px;'>
+        <div style='float: left;'><img src='img/blue.png'></img>
+        <p class='small'><strong>Press the F key</strong></p></div>
+        <div style='float: right;'><img src='img/orange.png'></img>
+        <p class='small'><strong>Press the J key</strong></p></div>
+        </div>
+        <p>Press any key to begin.</p>
+      `,
+      post_trial_gap: 2000
     };
     timeline.push(instructions);
 
+    /* define trial stimuli array for timeline variables */
+    var test_stimuli = [
+      { stimulus: "img/blue.png"},
+      { stimulus: "img/orange.png"}
+    ];
+
+    /* define fixation and test trials */
+    var fixation = {
+      type: jsPsychHtmlKeyboardResponse,
+      stimulus: '<div style="font-size:60px;">+</div>',
+      choices: "NO_KEYS",
+      trial_duration: 1000,
+    };
+
+    var test = {
+      type: jsPsychImageKeyboardResponse,
+      stimulus: jsPsych.timelineVariable('stimulus'),
+      choices: ['f', 'j']
+    };
+
+    /* define test procedure */
+    var test_procedure = {
+      timeline: [fixation, test],
+      timeline_variables: test_stimuli
+    };
+    timeline.push(test_procedure);
+
     /* start the experiment */
     jsPsych.run(timeline);
-</script>
 
+  </script>
 </html>
