--- a/vite-project/src/task.html
+++ b/vite-project/src/task.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>My experiment</title>
     <script src="https://unpkg.com/jspsych@8.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@2.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@2.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-preload@2.0.0"></script>
     <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body></body>
-  <script>
+</head>
+
+<body></body>
+<script>
 
     /* initialize jsPsych */
-    var jsPsych = initJsPsych();
+    var jsPsych = initJsPsych({
+        on_finish: function () {
+            jsPsych.data.displayData();
+        }
+    });
 
     /* create timeline */
     var timeline = [];
 
     /* preload images */
     var preload = {
-      type: jsPsychPreload,
-      images: ['img/blue.png', 'img/orange.png']
-    }
+        type: jsPsychPreload,
+        images: ['img/blue.png', 'img/orange.png']
+    };
     timeline.push(preload);
 
     /* define welcome message trial */
     var welcome = {
-      type: jsPsychHtmlKeyboardResponse,
-      stimulus: "Welcome to the experiment. Press any key to begin."
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: "Welcome to the experiment. Press any key to begin."
     };
     timeline.push(welcome);
 
     /* define instructions trial */
     var instructions = {
-      type: jsPsychHtmlKeyboardResponse,
-      stimulus: `
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: `
         <p>In this experiment, a circle will appear in the center 
         of the screen.</p><p>If the circle is <strong>blue</strong>, 
         press the letter F on the keyboard as fast as you can.</p>
@@ -48,39 +54,54 @@
         </div>
         <p>Press any key to begin.</p>
       `,
-      post_trial_gap: 2000
+        post_trial_gap: 2000
     };
     timeline.push(instructions);
 
     /* define trial stimuli array for timeline variables */
     var test_stimuli = [
-      { stimulus: "img/blue.png"},
-      { stimulus: "img/orange.png"}
+        { stimulus: "img/blue.png", correct_response: "f" },
+        { stimulus: "img/orange.png", correct_response: "j" }
     ];
 
     /* define fixation and test trials */
     var fixation = {
-      type: jsPsychHtmlKeyboardResponse,
-      stimulus: '<div style="font-size:60px;">+</div>',
-      choices: "NO_KEYS",
-      trial_duration: 1000,
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: '<div style="font-size:60px;">+</div>',
+        choices: "NO_KEYS",
+        trial_duration: function () {
+            return jsPsych.randomization.sampleWithoutReplacement([250, 500, 750, 1000, 1250, 1500, 1750, 2000], 1)[0];
+        },
+        data: {
+            task: 'fixation'
+        }
     };
 
     var test = {
-      type: jsPsychImageKeyboardResponse,
-      stimulus: jsPsych.timelineVariable('stimulus'),
-      choices: ['f', 'j']
+        type: jsPsychImageKeyboardResponse,
+        stimulus: jsPsych.timelineVariable('stimulus'),
+        choices: ['f', 'j'],
+        data: {
+            task: 'response',
+            correct_response: jsPsych.timelineVariable('correct_response')
+        },
+        on_finish: function (data) {
+            data.correct = jsPsych.pluginAPI.compareKeys(data.response, data.correct_response);
+        }
     };
 
     /* define test procedure */
     var test_procedure = {
-      timeline: [fixation, test],
-      timeline_variables: test_stimuli
+        timeline: [fixation, test],
+        timeline_variables: test_stimuli,
+        randomize_order: true,
+        repetitions: 5
     };
     timeline.push(test_procedure);
 
     /* start the experiment */
     jsPsych.run(timeline);
 
-  </script>
+</script>
+
 </html>
